--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <title>Reloj con Javascript</title>
 <script src="script.js"></script>
 </head>
-
+dasdas
 <body onload="mueveReloj()">
 
 La hora es
